# feedtorrent

./: Main.hs  feedtorrent.cabal
Adam/FeedTorrent/: Args.hs  Config.hs  ConfigSerializer.hs  Data.hs  Download.hs  Imports.hs  Parser.hs  PreludeImports.hs  Test.hs  Url.hs
testxmls/: 1.orig.xml  1.xml  2.xml
