Name:          feedtorrent
Version:       0.1
Stability:     Experimental
Category:      Web
Synopsis:      Application for downloading torrent files by RSS.
Description:   Specify RSS feeds containing enclosed torrent files and the
               application can download the feeds and download torrent files
               that have not previously been downloaded. Note that this is not a
               torrent client, it simply downloads torrent files.
Author:        Adam Bergmark
Maintainer:    Adam Bergmark <adam@edea.se>
License:       GPL-3
License-File:  License
Cabal-Version: >= 1.2
Build-Type:    Simple
Homepage:       http://github.com/Raevel/feedtorrent/
Executable feedtorrent
  Main-is: Main.hs
Library
  Exposed-Modules: Adam.FeedTorrent.Data
                 , Adam.FeedTorrent.Parser
                 , Adam.FeedTorrent.Download
                 , Adam.FeedTorrent.Config
                 , Adam.FeedTorrent.Test
                 , Adam.FeedTorrent.PreludeImports
                 , Adam.FeedTorrent.Url
                 , Adam.FeedTorrent.Args
                 , Main
  Build-Depends: base >= 4.0
               , haskell98
               , HaXml == 1.20
               , network == 2.2.1.7
               , HTTP == 4000.0.9
               , directory == 1.0.1.0
               , filepath == 1.1.0.3
               , bytestring == 0.9.1.5
               , pureMD5 == 1.0.0.3
               , shellscript == 0.1.4
               , RJson == 0.3.7
               , syb-with-class == 0.6.1
               , parseargs == 0.1.2
  GHC-Options: -Wall
